--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,20 @@
-# build output
-dist/
-# generated types
-.astro/
-
-# dependencies
-node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
+# OS junk
 .DS_Store
+Thumbs.db
 
-# jetbrains setting folder
+# Editor folders
+.vscode/
 .idea/
+
+# Logs & caches
+*.log
+*.tmp
+*.cache
+
+# Build output (none yet, but safe)
+dist/
+build/
+
+# Env / secrets (if added later)
+.env
+.env.*
